--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>JN-AN-1171-ZigBee-LightLink-Demo</name>
+	<name>ZigBee-LightLink-Bridge</name>
 	<comment></comment>
 	<projects>
 	</projects>
